Commit 3 : Fetch data using Classic SQL code

--- a/MVCWebAPIApp/WebAPILayer/Web.config
+++ b/MVCWebAPIApp/WebAPILayer/Web.config
@@ -4,6 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <connectionStrings>
+    <add name="SqlConnection"
+         connectionString="server=(LocalDB)\LocalDBTest; database=EmployeeTest; integrated security=true;"
+         providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <appSettings></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
